syntax = "proto3";

package login.service.v1;

option go_package = "project-user/pkg/service/login.service.v1";

message UserMessage{
   string uid = 1;
}

message UserResponse{
   string username = 1;
}

message LoginMessage{
   string username = 1;
   string password = 2;
}

message LoginResponse{
   string token = 1;
}
service UserService{
    rpc GetUserinfo(UserMessage) returns (UserResponse) {}
    rpc Login(LoginMessage) returns (LoginResponse) {}
}

//protoc --go_out=./gen --go_opt=paths=source_relative --go-grpc_out=./gen --go-grpc_opt=paths=source_relative  login_service.proto
